add mldToMpd function